third_party/move/move-compiler-v2/tests/checking/typing/lambda_widen_result.exp

Diagnostics:
error: expected function type returns value of type `&mut integer` but `&integer` was provided
   ┌─ tests/checking/typing/lambda_widen_result.move:43:38
   │
43 │         let r = pass_mut_ref(&mut v, |x| (freeze(x)));
   │                                      ^^^^^^^^^^^^^^^

error: expected function type returns value of type `&mut integer` but `&integer` was provided
   ┌─ tests/checking/typing/lambda_widen_result.move:65:39
   │
65 │         let r = pass_mut2_ref(&mut v, |x| (freeze(x)));
   │                                       ^^^^^^^^^^^^^^^

error: expected function type has argument of type `&integer` but `&mut integer` was provided
    ┌─ tests/checking/typing/lambda_widen_result.move:109:39
    │
109 │         let r = pass_mut4_ref(&mut v, |x| (freeze(x)));
    │                                       ^^^^^^^^^^^^^^^

error: expected function type has argument of type `&integer` but `&mut integer` was provided
    ┌─ tests/checking/typing/lambda_widen_result.move:126:38
    │
126 │         let r = pass_imm_ref(&mut v, |x| freeze(x));
    │                                      ^^^^^^^^^^^^^

error: expected function type has argument of type `&integer` but `&mut integer` was provided
    ┌─ tests/checking/typing/lambda_widen_result.move:136:38
    │
136 │         let r = pass_imm_ref(&mut v, |x| (freeze(x)));
    │                                      ^^^^^^^^^^^^^^^
